--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.0.17
+  provider: ^6.0.5
+  google_fonts: ^4.0.1
+  get: ^4.6.5
+  sizer: ^2.0.15
+  cached_network_image: ^3.2.3
+  dio: ^4.0.6
+  loading_indicator: ^3.1.0
+  image_picker: ^0.8.6+1
 
 dev_dependencies:
   flutter_test:
