--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   dio: ^4.0.6
   loading_indicator: ^3.1.0
   image_picker: ^0.8.6+1
+  loader_overlay: ^2.1.0
+  font_awesome_flutter: ^10.3.0
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
