--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,4 +80,11 @@ dependencies {
     implementation 'androidx.work:work-runtime:2.8.0'
     // Add the dependencies for any other desired Firebase products
     // https://firebase.google.com/docs/android/setup#available-libraries
+    def work_version = "2.7.0"
+
+// (Java only)
+implementation "androidx.work:work-runtime:$work_version"
+
+// Kotlin + coroutines
+implementation "androidx.work:work-runtime-ktx:$work_version"
 }
